--- a/package.json
+++ b/package.json
@@ -1,16 +1,26 @@
 {
-  "name": "fitbook",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
-    "react-scripts": "1.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-  }
+    "name": "my-app",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "animate.css": "^3.6.1",
+        "fetch": "^1.1.0",
+        "json-server": "^0.12.1",
+        "node-sass-chokidar": "^1.2.2",
+        "npm-run-all": "^4.1.2",
+        "react": "^16.3.2",
+        "react-count-to": "^0.10.0",
+        "react-dom": "^16.3.2",
+        "react-scripts": "1.1.4"
+    },
+    "scripts": {
+        "test": "react-scripts test --env=jsdom",
+        "eject": "react-scripts eject",
+        "build-css": "node-sass-chokidar src/ -o src/",
+        "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
+        "start-js": "react-scripts start",
+        "start": "npm-run-all -p watch-css start-js",
+        "build-js": "react-scripts build",
+        "build": "npm-run-all build-css build-js"
+    }
 }
